# voice-changer

./: AGENTS.md  README_dev_en.md  README_dev_ja.md  README_dev_ko.md  README_dev_ru.md  README_en.md  README_ko.md  README_ru.md
docker_trainer/: README.md
docs/: onnx_unity_sentis_research_ja.md  onnx_unity_sentis_roadmap_ja.md
server/: offline_vc_test.py  pyproject.toml
server/voice_changer/RVC/embedder/: EmbedderManager.py  OnnxContentvec.py
server/voice_changer/RVC/onnxExporter/: export2onnx_sentis.py  verify_sentis_onnx.py
tutorials/: tutorial_uv_amd_rocm.md
